Don't try to load version 3 XCF files made with Gimp 2.9

Finally Gimp 2.9's file format has changed so much that xcftools
cannot load the tiles anymore. Until someone, somewhere updates
xcftools to support the new file format, Krita won't load Gimp
2.9 files.

BUG:379889