plugins/impex/xcf/kis_xcf_import.cpp
@@ -164,7 +164,7 @@ KisImportExportFilter::ConversionStatus KisXCFImport::convert(KisDocument *docum
     // Decode the data
     getBasicXcfInfo() ;
 
-    if (XCF.version < 0 || XCF.version > 3) {
+    if (XCF.version < 0 || XCF.version > 2) {
         document->setErrorMessage(i18n("This XCF file is too new; Krita cannot support XCF files written by GIMP 2.9 or newer."));
         return KisImportExportFilter::UnsupportedVersion;
     }
